Possible fix for blurry cursor on retina screens

--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -8,13 +8,20 @@
     background-position: center;
 }
 
+@mixin blueCursor(){
+    // Source: https://gist.github.com/dsdsdsdsdsds/bd142334efcd81f0b30e
+    cursor: url("../assets/cursor.svg") 0 0, pointer; /* FF */
+    cursor: -webkit-image-set(url("../assets/cursor.png") 1x, url("../assets/cursor@2x.png") 2x) 0 0, pointer; /* Webkit */
+}
+
 body {
     background: $gray;
     font-family: $america;
-    cursor: url("data:image/svg+xml,%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:a='http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/' x='0px' y='0px' width='50px' height='50px' viewBox='0 0 50 50' style='enable-background:new 0 0 50 50;' xml:space='preserve'%3E%3Cstyle type='text/css'%3E .st0%7Bfill:%230408D9;%7D%0A%3C/style%3E%3Cdefs%3E%3C/defs%3E%3Cg%3E%3Ccircle class='st0' cx='25' cy='25' r='25'/%3E%3C/g%3E%3C/svg%3E%0A"), pointer;
+    @include blueCursor;
+    
 }
 
 a {
-    cursor: url("data:image/svg+xml,%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:a='http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/' x='0px' y='0px' width='50px' height='50px' viewBox='0 0 50 50' style='enable-background:new 0 0 50 50;' xml:space='preserve'%3E%3Cstyle type='text/css'%3E .st0%7Bfill:%230408D9;%7D%0A%3C/style%3E%3Cdefs%3E%3C/defs%3E%3Cg%3E%3Ccircle class='st0' cx='25' cy='25' r='25'/%3E%3C/g%3E%3C/svg%3E%0A"), pointer;
+    @include blueCursor;
 
 }
